--- a/WordPress/Resources/es.lproj/Localizable.strings
+++ b/WordPress/Resources/es.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-06-30 15:57:41+0000 */
+/* Translation-Revision-Date: 2021-07-13 17:11:39+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: es */
@@ -507,6 +507,9 @@
 "Add image, or avatar, to represent this new account." = "Añade una imagen o avatar para representar a esta nueva cuenta.";
 
 /* No comment provided by engineer. */
+"Add link" = "Añadir enlace";
+
+/* No comment provided by engineer. */
 "Add link text" = "Añadir texto del enlace";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
@@ -672,9 +675,6 @@
 /* Error message shown when trying to view the Plugins feature and there is no internet connection.
    Error message when the user tries to visualize a plugin without internet connection */
 "An active internet connection is required to view plugins" = "Se requiere una conexión a internet activa para ver los plugins";
-
-/* Error message shown when trying to view Stats and there is no internet connection. */
-"An active internet connection is required to view stats" = "Se necesita conexión a internet para ver las estadísticas";
 
 /* Error message shown when trying to view the Scan History feature and there is no internet connection. */
 "An active internet connection is required to view the history" = "Se necesita conexión a internet para ver el historial";
@@ -2341,6 +2341,9 @@
 /* No comment provided by engineer. */
 "Duplicate block" = "Duplicar bloque";
 
+/* No comment provided by engineer. */
+"EDIT LINK" = "EDITAR ENLACE";
+
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "Este";
 
@@ -2462,6 +2465,18 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "¡Correo electrónico enviado!";
 
+/* translators: accessibility text. %s: Embed caption. */
+"Embed caption. %s" = "Leyenda incrustada. %s";
+
+/* translators: accessibility text. Empty Embed caption. */
+"Embed caption. Empty" = "Leyenda incrustada. Vacía";
+
+/* No comment provided by engineer. */
+"Embed link" = "Enlace incrustado";
+
+/* translators: %s: host providing embed content e.g: www.youtube.com */
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "El contenido incrustado de %s no se puede ver en este momento en el editor móvil. Por favor, previsualiza la página para ver el contenido incrustado.";
+
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
 
@@ -2478,6 +2493,9 @@
 /* Title of a row displayed on the debug screen used in debug builds of the app */
 "Enable Quick Start for Site" = "Activar el inicio rápido para el sitio";
 
+/* Title for the button that will enable the site stats module. */
+"Enable Site Stats" = "Activar las estadísticas del sitio";
+
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "Habilita el acceso al micrófono para poder grabar sonido en tus vídeos.";
 
@@ -2486,6 +2504,12 @@
 
 /* Message prompting user to enable site notifications. */
 "Enable site notifications?" = "¿Activamos los avisos del sitio?";
+
+/* Error message shown when trying to view Stats and the stats module is disabled. */
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Activa las estadísticas del sitio para consultar información detallada sobre el tráfico, los «Me gusta», los comentarios y los suscriptores.";
+
+/* Text displayed while activating the site stats module. */
+"Enabling Site Stats..." = "Activando las estadísticas del sitio…";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "Registros cifrados";
@@ -3130,7 +3154,8 @@
 /* H6 Aztec Style */
 "Heading 6" = "Cabecera 6";
 
-/* Help button */
+/* Help button
+   Open editor help options */
 "Help" = "Ayuda";
 
 /* Link to Help section
@@ -3405,6 +3430,9 @@
 /* No comment provided by engineer. */
 "Invalid URL. Audio file not found." = "URL no válida. Archivo de audio no encontrado.";
 
+/* No comment provided by engineer. */
+"Invalid URL. Please enter a valid URL." = "URL no válida. Por favor, introduce una URL válida.";
+
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "Variable no válida";
 
@@ -3452,6 +3480,9 @@
 
 /* Message stating the minimum required version for Jetpack and asks the user if they want to upgrade */
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "Se necesita Jetpack %@ o posterior. ¿Quieres actualizar Jetpack?";
+
+/* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Las copias de seguridad de Jetpack para instalaciones multisitio proporcionan copias de seguridad descargables, no restauraciones con un solo clic. Para más información, %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "FAQ de Jetpack";
@@ -3646,7 +3677,7 @@
 "Link inserted" = "Enlace insertado";
 
 /* No comment provided by engineer. */
-"Link text" = "Texto de la lista";
+"Link text" = "Texto del enlace";
 
 /* Action. Label for navigate and display links to other posts on the site */
 "Link to existing content" = "Enlaza a contenido existente";
@@ -3798,6 +3829,9 @@
 
 /* No comment provided by engineer. */
 "Logs" = "Registros";
+
+/* Title for the error view when the stats module is disabled. */
+"Looking for stats?" = "¿Buscas las estadísticas?";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "Buscando dirección...";
@@ -4193,12 +4227,14 @@
 /* Text shown (to select no-category) in the parent-category-selection screen when creating a new category. */
 "No Category" = "Sin categoría";
 
-/* Title for the error view when there's no connection
-   Title of error prompt when no internet connection is available. */
+/* Title of error prompt when no internet connection is available. */
 "No Connection" = "Sin conexión";
 
 /* List Editor Empty State Message */
 "No Items" = "Sin elementos";
+
+/* Title when users have no Jetpack sites. */
+"No Jetpack sites found" = "No se han encontrado sitios de Jetpack";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "Sin menú";
@@ -5730,13 +5766,7 @@
 "Search WordPress\nfor a site or post" = "Buscar en WordPress\nun sitio o entrada";
 
 /* No comment provided by engineer. */
-"Search block" = "Buscar bloque";
-
-/* No comment provided by engineer. */
 "Search block label. Current text is" = "Etiqueta del bloque de búsqueda. El texto actual es";
-
-/* No comment provided by engineer. */
-"Search blocks" = "Buscar bloques";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Botón de búsqueda. El texto actual del botón es";
@@ -7994,6 +8024,9 @@
 /* Description for the Jetpack Restore Status message. %1$@ is a placeholder for the selected date. */
 "We're restoring your site back to %1$@." = "Estamos restaurando la versión de tu sitio del %1$@.";
 
+/* Description for label when the user's site is a multisite. */
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "Lo sentimos, la exploración de Jetpack no es compatible con las instalaciones multisitio de WordPress en este momento.";
+
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "También hemos enviado un enlace a tu archivo.";
 
@@ -8173,6 +8206,9 @@
 
 /* Subject of new Zendesk ticket. */
 "WordPress for iOS Support" = "Soporte de WordPress para iOS";
+
+/* Title for label when the user's site is a multisite. */
+"WordPress multisites are not supported" = "Los multisitios de WordPress no son compatibles";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "WordPress necesita permiso para acceder a la localización actual de tu dispositivo para poder añadirla a tu entrada. Por favor, actualiza tus ajustes de privacidad.";
@@ -8602,6 +8638,9 @@
 
 /* Noun. Describes a site's viewer. */
 "viewer" = "lector";
+
+/* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
+"visit our documentation page" = "visita nuestra página de documentación";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "no estará disponible en el futuro.";
