--- a/WordPress/Resources/ru.lproj/Localizable.strings
+++ b/WordPress/Resources/ru.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-06-29 18:18:50+0000 */
+/* Translation-Revision-Date: 2021-07-13 11:07:43+0000 */
 /* Plural-Forms: nplurals=3; plural=(n % 10 == 1 && n % 100 != 11) ? 0 : ((n % 10 >= 2 && n % 10 <= 4 && (n % 100 < 12 || n % 100 > 14)) ? 1 : 2); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: ru */
@@ -507,6 +507,9 @@
 "Add image, or avatar, to represent this new account." = "Добавьте изображение (или аватар) для представления этой новой учетной записи.";
 
 /* No comment provided by engineer. */
+"Add link" = "Добавить ссылку";
+
+/* No comment provided by engineer. */
 "Add link text" = "Добавить текст ссылки";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
@@ -672,9 +675,6 @@
 /* Error message shown when trying to view the Plugins feature and there is no internet connection.
    Error message when the user tries to visualize a plugin without internet connection */
 "An active internet connection is required to view plugins" = "Активное интернет подключение требуется для просмотра плагинов";
-
-/* Error message shown when trying to view Stats and there is no internet connection. */
-"An active internet connection is required to view stats" = "Для просмотра статистики требуется действующее подключение к Интернету";
 
 /* Error message shown when trying to view the Scan History feature and there is no internet connection. */
 "An active internet connection is required to view the history" = "Для просмотра истории требуется работающее подключение к Интернету";
@@ -2341,6 +2341,9 @@
 /* No comment provided by engineer. */
 "Duplicate block" = "Дублировать блок";
 
+/* No comment provided by engineer. */
+"EDIT LINK" = "ИЗМЕНИТЬ ССЫЛКУ";
+
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "восток";
 
@@ -2462,6 +2465,18 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "Письмо отправлено!";
 
+/* translators: accessibility text. %s: Embed caption. */
+"Embed caption. %s" = "Подпись встроенного объекта. %s";
+
+/* translators: accessibility text. Empty Embed caption. */
+"Embed caption. Empty" = "Подпись встроенного объекта. Пустая";
+
+/* No comment provided by engineer. */
+"Embed link" = "Встроить ссылку";
+
+/* translators: %s: host providing embed content e.g: www.youtube.com */
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Встроенное содержимое с %s на настоящий момент не может быть просмотрено в мобильном редакторе. Откройте предварительный просмотр страницы для его просмотра.";
+
 /* Title for the Emoji section */
 "Emoji" = "Эмодзи";
 
@@ -2478,6 +2493,9 @@
 /* Title of a row displayed on the debug screen used in debug builds of the app */
 "Enable Quick Start for Site" = "Включить быстрый старт для сайта";
 
+/* Title for the button that will enable the site stats module. */
+"Enable Site Stats" = "Включить статистику сайта";
+
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "Включите доступ к микрофону для записи звука к вашим видео.";
 
@@ -2486,6 +2504,12 @@
 
 /* Message prompting user to enable site notifications. */
 "Enable site notifications?" = "Включить уведомления с сайта?";
+
+/* Error message shown when trying to view Stats and the stats module is disabled. */
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Включите статистику сайта, чтобы посмотреть подробные данные о посещаемости, пользовательских оценках, комментариях и о подписчиках.";
+
+/* Text displayed while activating the site stats module. */
+"Enabling Site Stats..." = "Включение статистики сайта...";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "Зашифрованные журналы";
@@ -3130,7 +3154,8 @@
 /* H6 Aztec Style */
 "Heading 6" = "Заголовок 6";
 
-/* Help button */
+/* Help button
+   Open editor help options */
 "Help" = "Помощь";
 
 /* Link to Help section
@@ -3405,6 +3430,9 @@
 /* No comment provided by engineer. */
 "Invalid URL. Audio file not found." = "Неверный URL. Аудиофайл не найден.";
 
+/* No comment provided by engineer. */
+"Invalid URL. Please enter a valid URL." = "Неверный URL, укажите корректный URL.";
+
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "Неверная оконечная точка";
 
@@ -3452,6 +3480,9 @@
 
 /* Message stating the minimum required version for Jetpack and asks the user if they want to upgrade */
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "Для отображения статистики требуется Jetpack %@ или более поздней версии. Обновить Jetpack?";
+
+/* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Резервные копии Jetpack для мультисайт установок предоставляют скачиваемые резервные копии, но не восстановление в одно нажатие. Для подробностей %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "Jetpack FAQ";
@@ -3798,6 +3829,9 @@
 
 /* No comment provided by engineer. */
 "Logs" = "Логи";
+
+/* Title for the error view when the stats module is disabled. */
+"Looking for stats?" = "Ищете статистику?";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "Выполняется поиск адреса...";
@@ -4193,12 +4227,14 @@
 /* Text shown (to select no-category) in the parent-category-selection screen when creating a new category. */
 "No Category" = "Без рубрики";
 
-/* Title for the error view when there's no connection
-   Title of error prompt when no internet connection is available. */
+/* Title of error prompt when no internet connection is available. */
 "No Connection" = "Нет соединения";
 
 /* List Editor Empty State Message */
 "No Items" = "Нет элементов";
+
+/* Title when users have no Jetpack sites. */
+"No Jetpack sites found" = "Нет сайтов с Jetpack";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "Меню отсутствует";
@@ -5730,13 +5766,7 @@
 "Search WordPress\nfor a site or post" = "Искать в WordPress\nсайт или запись";
 
 /* No comment provided by engineer. */
-"Search block" = "Блок поиска";
-
-/* No comment provided by engineer. */
 "Search block label. Current text is" = "Ярлык блока поиска. Сейчас -";
-
-/* No comment provided by engineer. */
-"Search blocks" = "Блоки поиска";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Кнопка поиска. Текущий текст кнопки -";
@@ -7994,6 +8024,9 @@
 /* Description for the Jetpack Restore Status message. %1$@ is a placeholder for the selected date. */
 "We're restoring your site back to %1$@." = "Выполняется откат к состоянию сайта на %1$@.";
 
+/* Description for label when the user's site is a multisite. */
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "К сожалению, на данный момент система Jetpack Scan несовместима с мультисайтовыми установками WordPress.";
+
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "Мы также отправили вам ссылку на файл по email.";
 
@@ -8173,6 +8206,9 @@
 
 /* Subject of new Zendesk ticket. */
 "WordPress for iOS Support" = "Поддержка WordPress для iOS";
+
+/* Title for label when the user's site is a multisite. */
+"WordPress multisites are not supported" = "Мультисайтовые системы WordPress не поддерживаются";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "Сайту WordPress требуется доступ к данным о местоположении вашего устройства, чтобы добавить их к записи. Обновите настройки конфиденциальности.";
@@ -8602,6 +8638,9 @@
 
 /* Noun. Describes a site's viewer. */
 "viewer" = "обозреватель";
+
+/* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
+"visit our documentation page" = "посетите нашу страницу документации";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "в будущем будет недоступен.";
