--- a/WordPress/Resources/release_notes.txt
+++ b/WordPress/Resources/release_notes.txt
@@ -1,7 +1,7 @@
-* [*] Authors and Contributors can now view a site's Comments via My Site > Comments. [#16783]
-* [*] [Jetpack-only] Fix bugs when tapping to notifications
-* [*] Fixed some refresh issues with the site follow buttons in the reader. [#16819]
-* [*] Block editor: Update loading and failed screens for web version of the editor [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3573]
-* [*] Block editor: Handle floating keyboard case - Fix issue with the block selector on iPad. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3687]
-* [**] Block editor: Added color/background customization for text blocks. [https://github.com/WordPress/gutenberg/pull/33250]
+Text blocks get some love. Color and background customization is added to the block editor’s text blocks.
 
+Other block editor updates include fixing an issue with the block selector on iPad and update loading and failed screens for the editor’s web version.
+
+If you’ve experienced some refresh issues with the follow buttons in the Reader, you can rest easy now, as those issues have been solved.
+
+Authors and Contributors are no longer in the dark! They can now view a site’s Comments via My Site > Comments.
